# holodeck

./: .gitignore  .gitmodules  .ignore  Cargo.toml  README.md  build.rs
fonts/: holodeck-icons.toml  holofoil-icons.toml  pokedeck-icons.toml
pokebase/: Cargo.toml  build.rs
pokebase/core/: Cargo.toml
pokebase/core/data/: pokemon.ron
pokebase/core/src/: card.rs  database.rs  lib.rs  locale.rs  main.rs  map.rs  pokemon.rs  search.rs  series.rs  set.rs
pokebase/data/: series.ron  sets.ron
pokebase/src/: card.rs  database.rs  error.rs  lib.rs  locale.rs  main.rs  map.rs  pokemon.rs  series.rs  session.rs  set.rs
pokebase/src/card/: pricing.rs
pokebase/src/session/: pokemon_tcg.rs  tcgdex.rs
src/: binder.rs  card.rs  collection.rs  icon.rs  main.rs  screen.rs  widget.rs
src/card/: pricing.rs
src/screen/: binder.rs  binders.rs  welcome.rs
