[package]
name = "holodeck"
version = "0.1.0"
edition = "2024"

[dependencies]
iced.workspace = true
iced.features = ["tokio", "canvas", "image", "debug"]

serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["fs"]

anywho.workspace = true
bytes.workspace = true
dirs.workspace = true
function.workspace = true
futures-util.workspace = true
image.workspace = true
log.workspace = true
pokebase.workspace = true
reqwest.workspace = true
ron.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
iced_fontello.workspace = true

[workspace]
members = ["pokebase", "pokebase/core"]

[workspace.dependencies]
pokebase.path = "./pokebase"
pokebase-core.path = "./pokebase/core"

anywho = "0.1.0"
bytes = "1"
dirs = "6"
flate2 = "1"
function = "0.2"
futures-util = "0.3"
iced = "0.14.0-dev"
iced_fontello = "0.13"
image = "0.25"
log = "0.4"
reqwest = "0.12"
ron = "0.10"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing-subscriber = "0.3"

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced.rev = "c4e6e42759a293e2e4d6a18db1b92316273efd20"
