[package]
name = "holodeck"
version = "0.1.0"
edition = "2024"

[dependencies]
iced.workspace = true
iced.features = ["tokio", "canvas", "image", "debug"]

iced_palace.workspace = true
iced_palace.features = ["geometry"]

serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["fs"]

anywho.workspace = true
bytes.workspace = true
dirs.workspace = true
function.workspace = true
futures-util.workspace = true
image.workspace = true
log.workspace = true
pokebase.workspace = true
reqwest.workspace = true
ron.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
iced_fontello.workspace = true

[workspace]
members = ["pokebase", "pokebase/core"]

[workspace.dependencies]
pokebase.path = "./pokebase"
pokebase-core.path = "./pokebase/core"

anywho = "0.1.2"
bytes = "1"
dirs = "6"
flate2 = "1"
function = "0.2"
futures-util = "0.3"
iced = "0.14.0-dev"
iced_fontello = "0.14.0-dev"
iced_palace = "0.14.0-dev"
image = "0.25"
log = "0.4"
reqwest = "0.12"
ron = "0.10"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing-subscriber = "0.3"

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced.rev = "6bf709e03efaf9ee477a742a13feb8e9262c647d"

iced_core.git = "https://github.com/iced-rs/iced.git"
iced_core.rev = "6bf709e03efaf9ee477a742a13feb8e9262c647d"

iced_widget.git = "https://github.com/iced-rs/iced.git"
iced_widget.rev = "6bf709e03efaf9ee477a742a13feb8e9262c647d"

iced_palace.git = "https://github.com/hecrj/iced_palace.git"
iced_palace.rev = "1c4014f80cbe78f1bb248cc81cc85620c6a11e93"

# For testing new bleeding edge iced features
# iced.path = "../iced"
# iced_core.path = "../iced/core"
# iced_widget.path = "../iced/widget"

[lints.clippy]
single-component-path-imports = "allow"
