[package]
name = "pokebase"
version = "0.1.0"
edition = "2024"

[features]
static = []

[dependencies]
serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["fs", "rt"]

anywho.workspace = true
dirs.workspace = true
serde_json.workspace = true
ron.workspace = true
