[package]
name = "pokebase"
version = "0.1.0"
edition = "2024"
include = [
  "/src",
  "data/*.ron.gz",
  "!data/*.ron",
]

[dependencies]
serde.workspace = true
serde.features = ["derive"]

tokio.workspace = true
tokio.features = ["fs", "rt"]

anywho.workspace = true
dirs.workspace = true
flate2.workspace = true
serde_json.workspace = true
ron.workspace = true

[build-dependencies]
flate2.workspace = true
