[package]
name = "pokebase"
version = "0.1.0"
edition = "2024"

[dependencies]
pokebase-core.workspace = true

reqwest.workspace = true
reqwest.features = ["json"]

serde.workspace = true
serde.features = ["derive"]

bytes.workspace = true
futures-util.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
